--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1768,15 +1768,6 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
   .product-list { grid-template-columns: repeat(3, 1fr); }
 
 
-
-  /* CTA styles removed */
-
-
-
-  /* SPECIAL styles removed */
-
-
-
   /**
    * INSTA POST
    */
@@ -2120,18 +2111,18 @@ a.footer-link:is(:hover, :focus) { color: var(--bittersweet); }
   pointer-events: none;
 }
 
-.preloader-spinner {
-  width: 50px;
-  height: 50px;
-  border: 5px solid var(--cda-accent);
-  border-top-color: var(--cda-primary);
-  border-radius: 50%;
-  animation: spin 1s linear infinite;
+.preloader-logo {
+  width: 150px;
+  border-radius: 15px;
+  animation: bump 1.5s ease-in-out infinite;
 }
 
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
+@keyframes bump {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
   }
 }
 
